Make mana infusion definition logic more concise
- most recipe names are generated based on the items involved (usually output item, or "x from y" for cycle recipes)
- recipes are grouped by catalyst, and cycle recipes are also grouped by cycle name